@@ -106,11 +106,12 @@ in a view widget.
 </para>
 
 @parent_class: 
-@marker_updated: 
 @_gtk_source_reserved1: 
 @_gtk_source_reserved2: 
 @_gtk_source_reserved3: 
 @_gtk_source_reserved4: 
+@_gtk_source_reserved5: 
+@_gtk_source_reserved6: 
 
 <!-- ##### FUNCTION gtk_source_buffer_new ##### -->
 <para>
